--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/Boris.BeekProject.Guis.Web.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/Boris.BeekProject.Guis.Web.csproj
@@ -36,6 +36,9 @@
       <HintPath>..\dependencies\NHaml.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\dependencies\System.Web.Mvc.dll</HintPath>
@@ -72,11 +75,14 @@
   <ItemGroup>
     <None Include="views\account\Profile.haml" />
     <None Include="views\account\EditProfile.haml" />
-    <None Include="views\Home\index.haml" />
-    <None Include="views\Home\test.haml" />
-    <None Include="views\Home\_partial.haml" />
-    <None Include="views\Home\_test.haml" />
+    <None Include="views\home\index.haml" />
+    <None Include="views\home\test.haml" />
+    <None Include="views\home\_partial.haml" />
+    <None Include="views\home\_test.haml" />
     <None Include="views\shared\application.haml" />
+    <None Include="views\shared\_myStuff.haml" />
+    <None Include="views\shared\_myStuffAnonymous.haml" />
+    <None Include="views\shared\_messages.haml" />
     <None Include="views\shared\_footer.haml" />
     <None Include="views\shared\_header.haml" />
     <None Include="views\shared\_scripts.haml" />
@@ -91,6 +97,10 @@
     <ProjectReference Include="..\Boris.BeekProject.Guis.Shared\Boris.BeekProject.Guis.Shared.csproj">
       <Project>{FC249D92-0447-4F58-8C3D-88300058957C}</Project>
       <Name>Boris.BeekProject.Guis.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Boris.BeekProject.Model\Boris.BeekProject.Model.csproj">
+      <Project>{7A10D58A-1F92-462E-B722-034EF25AE2F3}</Project>
+      <Name>Boris.BeekProject.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
