--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
@@ -24,8 +24,8 @@
   </configSections>
 
   <appSettings>
-    <add key="userRepository.path.db4o" value="\App_Data\db4o\userRepository.db4o"/>
-    <add key="beekRepository.path.db4o" value="\App_Data\db4o\beekRepository.db4o"/>
+    <add key="userRepository.path.db4o" value="App_Data\db4o\userRepository.db4o"/>
+    <add key="beekRepository.path.db4o" value="App_Data\db4o\beekRepository.db4o"/>
   </appSettings>
   
 	<connectionStrings><clear/></connectionStrings>
@@ -33,10 +33,12 @@
   <nhaml autoRecompile="true" templateCompiler="CSharp3" encodeHtml="true" useTabs="false" indentSize="2">
     <assemblies>
       <add assembly="Boris.Utils.NHaml"/>
+      <add assembly="Boris.BeekProject.Model"/>
       <!--<add assembly="xVal"/>-->
     </assemblies>
     <namespaces>
       <add namespace="Boris.Utils.NHaml.Helpers"/>
+      <add namespace="System.Linq"/>
     </namespaces>
   </nhaml>
   
@@ -66,26 +68,7 @@
     -->
 		<authentication mode="Forms">
 			<forms loginUrl="~/Account/LogOn" timeout="2880"/>
-		</authentication>
-		<membership>
-			<providers>
-				<clear/>
-				<add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" passwordFormat="Hashed" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" passwordStrengthRegularExpression="" applicationName="/"/>
-			</providers>
-		</membership>
-		<profile>
-			<providers>
-				<clear/>
-				<add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="ApplicationServices" applicationName="/"/>
-			</providers>
-		</profile>
-		<roleManager enabled="false">
-			<providers>
-				<clear/>
-				<add connectionStringName="ApplicationServices" applicationName="/" name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
-				<add applicationName="/" name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
-			</providers>
-		</roleManager>
+		</authentication>    
 		<!--
             The <customErrors> section enables configuration 
             of what to do if/when an unhandled error occurs 
@@ -98,7 +81,7 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
     -->
-		<pages>
+		<!--<pages>
 			<controls>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 				<add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -108,10 +91,10 @@
 				<add namespace="System.Web.Mvc.Ajax"/>
 				<add namespace="System.Web.Mvc.Html"/>
 				<add namespace="System.Web.Routing"/>
-				<add namespace="System.Linq"/>
 				<add namespace="System.Collections.Generic"/>
+        <add namespace="System.Linq"/>
 			</namespaces>
-		</pages>
+		</pages>-->
 		<httpHandlers>
 			<remove verb="*" path="*.asmx"/>
 			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -130,11 +113,11 @@
 				<providerOption name="CompilerVersion" value="v3.5"/>
 				<providerOption name="WarnAsError" value="false"/>
 			</compiler>
-			<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" warningLevel="4" type="Microsoft.VisualBasic.VBCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<!--<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" warningLevel="4" type="Microsoft.VisualBasic.VBCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
 				<providerOption name="CompilerVersion" value="v3.5"/>
 				<providerOption name="OptionInfer" value="true"/>
 				<providerOption name="WarnAsError" value="false"/>
-			</compiler>
+			</compiler>-->
 		</compilers>
 	</system.codedom>
 	<system.web.extensions/>
