--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
@@ -34,11 +34,14 @@
     <assemblies>
       <add assembly="Boris.Utils.NHaml"/>
       <add assembly="Boris.BeekProject.Model"/>
-      <!--<add assembly="xVal"/>-->
+      <add assembly="Boris.BeekProject.Guis.Shared"/>
+      <add assembly="Microsoft.Web.Mvc"/>
     </assemblies>
     <namespaces>
-      <add namespace="Boris.Utils.NHaml.Helpers"/>
       <add namespace="System.Linq"/>
+      <add namespace="Boris.Utils.NHaml.Helpers"/>
+      <add namespace="Boris.BeekProject.Guis.Shared.Controllers"/>
+      <add namespace="Microsoft.Web.Mvc"/>
     </namespaces>
   </nhaml>
   
@@ -59,6 +62,7 @@
 				<add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="System.Xml.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="System.Data.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="Microsoft.Web.Mvc"/>
 			</assemblies>
 		</compilation>
 		<!--
@@ -81,20 +85,20 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
     -->
-		<!--<pages>
+		<pages>
 			<controls>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 				<add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			</controls>
 			<namespaces>
 				<add namespace="System.Web.Mvc"/>
+        <add namespace="Microsoft.Web.Mvc"/>
 				<add namespace="System.Web.Mvc.Ajax"/>
 				<add namespace="System.Web.Mvc.Html"/>
 				<add namespace="System.Web.Routing"/>
 				<add namespace="System.Collections.Generic"/>
-        <add namespace="System.Linq"/>
 			</namespaces>
-		</pages>-->
+		</pages>
 		<httpHandlers>
 			<remove verb="*" path="*.asmx"/>
 			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
