--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
@@ -77,6 +77,7 @@
 				<add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			</controls>
 			<namespaces>
+        <add namespace="Microsoft.Web.Mvc"/>
 				<add namespace="System.Web.Mvc"/>
 				<add namespace="System.Web.Mvc.Ajax"/>
 				<add namespace="System.Web.Mvc.Html"/>
@@ -85,7 +86,8 @@
         <add namespace="System.Linq"/>
         <add namespace="Boris.BeekProject.Guis.Shared.ViewModels"/>
         <add namespace="Boris.Utils.Html.Helpers"/>
-			</namespaces>
+        <add namespace="Boris.BeekProject.Guis.Shared.Controllers"/>        
+      </namespaces>
 		</pages>
     <httpHandlers>
       <remove verb="*" path="*.asmx"/>
