--- a/Boris.BeekProject/Boris.BeekProject.Model/Boris.BeekProject.Model.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Model/Boris.BeekProject.Model.csproj
@@ -80,6 +80,13 @@
       <Project>{ED162812-90E3-4D4F-A47E-C5D0297D51D5}</Project>
       <Name>Boris.Utils.IO</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Boris.Utils.Security\Boris.Utils.Security.csproj">
+      <Project>{541CEE5E-8BA8-486E-8FB4-6845543E2298}</Project>
+      <Name>Boris.Utils.Security</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
