update after move from svn

--- a/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Boris.BeekProject.Guis.Shared</RootNamespace>
     <AssemblyName>Boris.BeekProject.Guis.Shared</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -31,6 +31,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -126,7 +127,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Ioc\DefaultRoutRegistration.cs" />
-    <Compile Include="Ioc\SearchServiceRegistration.cs" />
     <Compile Include="Ioc\UserRepositoryRegistration.cs" />
     <Compile Include="ModelBinding\BaseBeekModelBinder.cs" />
     <Compile Include="ModelBinding\UserModelBinder.cs" />
@@ -177,6 +177,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
