--- a/Boris.Utils/Boris.Utils.Html/Boris.Utils.Html.csproj
+++ b/Boris.Utils/Boris.Utils.Html/Boris.Utils.Html.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1F4C8DAC-4248-4FC3-8422-310D51851F31}</ProjectGuid>
+    <ProjectGuid>{AF365B66-9ED4-4B01-BD6A-030834819334}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Boris.BeekProject.Services</RootNamespace>
-    <AssemblyName>Boris.BeekProject.Services</AssemblyName>
+    <RootNamespace>Boris.Utils.Html</RootNamespace>
+    <AssemblyName>Boris.Utils.Html</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -57,27 +57,23 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Boris.Utils\dependencies\System.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Xml.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data.DataSetExtensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Accounts\AccountService.cs" />
-    <Compile Include="Accounts\IAccountService.cs" />
+    <Compile Include="Helpers\HtmlHelperExtentions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Search\SearchBags\BeekSearchbag.cs" />
-    <Compile Include="Search\ISearchService.cs" />
-    <Compile Include="Search\SearchBags\UserSearchbag.cs" />
-    <Compile Include="Search\SearchService.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Boris.Utils\Boris.Utils.Strings\Boris.Utils.Strings.csproj">
-      <Project>{460BCD98-0AD7-4536-9DFB-B38D33E1BF13}</Project>
-      <Name>Boris.Utils.Strings</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Boris.BeekProject.Model\Boris.BeekProject.Model.csproj">
-      <Project>{7A10D58A-1F92-462E-B722-034EF25AE2F3}</Project>
-      <Name>Boris.BeekProject.Model</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
       <Visible>False</Visible>
