--- a/Boris.BeekProject/Boris.BeekProject.Misc.BeekFiller/app.config
+++ b/Boris.BeekProject/Boris.BeekProject.Misc.BeekFiller/app.config
@@ -6,5 +6,6 @@
   <appSettings>
     <add key="userRepository.path.db4o" value="..\..\App_Data\db4o\userRepository.db4o"/>
     <add key="beekRepository.path.db4o" value="..\..\App_Data\db4o\beekRepository.db4o"/>
+    <add key="isbnDb.baseRequestString" value="http://isbndb.com/api/books.xml?access_key=DM43UJGL&amp;index1={0}&amp;value1={1}"/>
   </appSettings>
 </configuration>
