--- a/Boris.BeekProject/Boris.BeekProject.Services/Boris.BeekProject.Services.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Services/Boris.BeekProject.Services.csproj
@@ -57,11 +57,15 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Web" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accounts\AccountService.cs" />
     <Compile Include="Accounts\IAccountService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search\IsbnDbSearchService.cs" />
     <Compile Include="Search\SearchBags\BeekSearchbag.cs" />
     <Compile Include="Search\ISearchService.cs" />
     <Compile Include="Search\SearchBags\UserSearchbag.cs" />
