--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
@@ -57,10 +57,10 @@
         <add namespace="System.Web.Mvc.Ajax"/>
         <add namespace="System.Web.Mvc.Html"/>
         <add namespace="System.Web.Routing"/>
-        <add namespace="Boris.BeekProject.Guis.Shared.ViewModels"/>
-        <add namespace="Boris.BeekProject.Guis.Shared.ViewModels.DTO"/>
+        <add namespace="Boris.BeekProject.Guis.Shared.ViewData"/>
         <add namespace="Boris.Utils.Html.Helpers"/>
         <add namespace="Boris.BeekProject.Guis.Shared.Controllers"/>
+        <add namespace="Boris.BeekProject.Guis.Shared.ViewModels"/>
       </namespaces>
 		</pages>
 		<httpHandlers>
