--- a/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
@@ -85,12 +85,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\dependencies\MvcTurbine.dll</HintPath>
     </Reference>
+    <Reference Include="MvcTurbine.Ninject">
+      <HintPath>..\dependencies\MvcTurbine.Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="MvcTurbine.Unity, Version=2.1.0.0, Culture=neutral, PublicKeyToken=0e426322531bc5b0, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\dependencies\MvcTurbine.Unity.dll</HintPath>
     </Reference>
-    <Reference Include="MvcTurbine.Web, Version=2.1.0.0, Culture=neutral, PublicKeyToken=0e426322531bc5b0, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="MvcTurbine.Web">
       <HintPath>..\dependencies\MvcTurbine.Web.dll</HintPath>
     </Reference>
     <Reference Include="Ninject">
@@ -134,14 +136,13 @@
     <Compile Include="ModelBinding\BaseBeekModelBinder.cs" />
     <Compile Include="ModelBinding\UserModelBinder.cs" />
     <Compile Include="MvcTurbineContainerFactory.cs" />
-    <Compile Include="ViewModels\BaseBeekViewModel.cs" />
-    <Compile Include="ViewModels\BeekViewModel.cs" />
-    <Compile Include="ViewModels\AccountViewModel.cs" />
+    <Compile Include="ViewData\BaseBeekViewData.cs" />
+    <Compile Include="ViewData\BeekViewData.cs" />
+    <Compile Include="ViewData\AccountViewData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\BeekListViewModel.cs" />
-    <Compile Include="ViewModels\DTO\BaseBeek.cs" />
-    <Compile Include="ViewModels\SearchViewModel.cs" />
-    <Compile Include="ViewModels\HomeViewModel.cs" />
+    <Compile Include="ViewModels\BaseBeek.cs" />
+    <Compile Include="ViewData\SearchViewData.cs" />
+    <Compile Include="ViewData\HomeViewData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Boris.Utils\Boris.Utils.IO\Boris.Utils.IO.csproj">
