--- a/Boris.Utils/Boris.Utils.Mvc/Boris.Utils.Mvc.csproj
+++ b/Boris.Utils/Boris.Utils.Mvc/Boris.Utils.Mvc.csproj
@@ -52,9 +52,11 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MvcTurbine.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0e426322531bc5b0, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\External\MvcTurbine2\MvcTurbine.Web.dll</HintPath>
+    <Reference Include="MvcTurbine">
+      <HintPath>..\dependencies\MvcTurbine.dll</HintPath>
+    </Reference>
+    <Reference Include="MvcTurbine.Web">
+      <HintPath>..\dependencies\MvcTurbine.Web.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
