--- a/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseBeekController.cs" />
     <Compile Include="Controllers\BeekController.cs" />
+    <Compile Include="Controllers\HeaderController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Global.asax.cs">
@@ -65,11 +66,13 @@
     <Compile Include="Ioc\UserRepositoryRegistration.cs" />
     <Compile Include="ModelBinding\BaseBeekModelBinder.cs" />
     <Compile Include="ModelBinding\UserModelBinder.cs" />
+    <Compile Include="MvcRouteFactory.cs" />
     <Compile Include="MvcTurbineContainerFactory.cs" />
     <Compile Include="ViewData\BaseBeekViewData.cs" />
     <Compile Include="ViewData\BeekViewData.cs" />
     <Compile Include="ViewData\AccountViewData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewData\HeaderViewData.cs" />
     <Compile Include="ViewModels\BaseBeek.cs" />
     <Compile Include="ViewData\SearchViewData.cs" />
     <Compile Include="ViewData\HomeViewData.cs" />
@@ -115,6 +118,9 @@
     </Reference>
     <Reference Include="Ninject">
       <HintPath>..\dependencies\Ninject.dll</HintPath>
+    </Reference>
+    <Reference Include="RouteDebug">
+      <HintPath>..\dependencies\RouteDebug.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
