--- a/Boris.BeekProject/Boris.BeekProject.Services/Boris.BeekProject.Services.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Services/Boris.BeekProject.Services.csproj
@@ -62,7 +62,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Accounts\AccountService.cs" />
+    <Compile Include="Accounts\HttpAccountService.cs" />
     <Compile Include="Accounts\IAccountService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search\IsbnDbSearchService.cs" />
@@ -72,6 +72,10 @@
     <Compile Include="Search\SearchService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Boris.Utils\Boris.Utils.Security\Boris.Utils.Security.csproj">
+      <Project>{541CEE5E-8BA8-486E-8FB4-6845543E2298}</Project>
+      <Name>Boris.Utils.Security</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Boris.Utils\Boris.Utils.Strings\Boris.Utils.Strings.csproj">
       <Project>{460BCD98-0AD7-4536-9DFB-B38D33E1BF13}</Project>
       <Name>Boris.Utils.Strings</Name>
