Refactored the user system to use viewmodels to contain validation and leverage the default binder for modelbinding.

--- a/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
@@ -76,6 +76,7 @@
     <Compile Include="ViewModels\BaseBeek.cs" />
     <Compile Include="ViewData\SearchViewData.cs" />
     <Compile Include="ViewData\HomeViewData.cs" />
+    <Compile Include="ViewModels\User.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
