Removed active navblock as it isn't working properly and I don't know how to fix it properly yet. Fixed loggingfilter

--- a/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Controllers\HeaderController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
+    <Compile Include="CurrentNavBlockFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -73,10 +74,10 @@
     <Compile Include="ViewData\AccountViewData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewData\HeaderViewData.cs" />
-    <Compile Include="ViewModels\BaseBeek.cs" />
+    <Compile Include="ViewModels\ViewBeek.cs" />
     <Compile Include="ViewData\SearchViewData.cs" />
     <Compile Include="ViewData\HomeViewData.cs" />
-    <Compile Include="ViewModels\User.cs" />
+    <Compile Include="ViewModels\ViewUser.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
