--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
@@ -8,6 +8,9 @@
     \Windows\Microsoft.Net\Framework\v2.x\Config 
 -->
 <configuration>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
 	<appSettings>
 		<add key="userRepository.path.db4o" value="App_Data\db4o\userRepository.db4o"/>
 		<add key="beekRepository.path.db4o" value="App_Data\db4o\beekRepository.db4o"/>
@@ -99,4 +102,27 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
+
+  <!--This configuration will archive a file at the beginning of each day and will use rolling file naming, 
+  so log file from the previous day can always be found in archives//log.0.txt, 
+  log from two days ago is in archives//log.1.txt and so on. 
+  This configuration will keep at most 7 archive files, so logs older than one week will be automatically deleted.-->
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="file" xsi:type="File"
+          layout="${longdate} ${logger} ${message}"
+          fileName="${basedir}/logs/logfile.txt"
+          archiveFileName="${basedir}/archives/log.{#}.txt"
+          archiveEvery="Day"
+          archiveNumbering="Rolling"
+          maxArchiveFiles="7"
+          concurrentWrites="true"
+          keepFileOpen="false"
+          encoding="iso-8859-2" />
+    </targets>
+
+    <rules>
+      <logger name="*" minlevel="Debug" writeTo="file" />
+    </rules>
+  </nlog>
 </configuration>
