Found a rather clean way to handle the navigation highlighting but still retain the header as a separate controller :)

--- a/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
@@ -53,18 +53,17 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Attributes\NavigationAttribute.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseBeekController.cs" />
     <Compile Include="Controllers\BeekController.cs" />
     <Compile Include="Controllers\HeaderController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
-    <Compile Include="CurrentNavBlockFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Ioc\DefaultRoutRegistration.cs" />
-    <Compile Include="Ioc\UserRepositoryRegistration.cs" />
     <Compile Include="ModelBinding\BaseBeekModelBinder.cs" />
     <Compile Include="ModelBinding\UserModelBinder.cs" />
     <Compile Include="MvcRouteFactory.cs" />
@@ -128,6 +127,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
