--- a/Boris.Utils/Boris.Utils.Mvc/Boris.Utils.Mvc.csproj
+++ b/Boris.Utils/Boris.Utils.Mvc/Boris.Utils.Mvc.csproj
@@ -77,7 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\LoggingFilter.cs" />
+    <Compile Include="Filters\LoggingFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
